Fix issue with user roles

--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -83,7 +83,7 @@
       <button class="btn btn-primary w-100 py-2" type="submit">Sign Up</button>
       <div class="d-flex justify-content-between mt-5 mb-3">
         <p class="text-body-secondary">©MediCare 2023</p>
-        <a th:href="@{/register}">No Account? Sign up here!</a>
+        <a th:href="@{/login}">Have an Account? Login</a>
       </div>
     </form>
   </main>
