--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -51,7 +51,7 @@
                 alt="mdo"
                 width="32"
                 height="32"
-                class="rounded-circle"
+                class="rounded-circle border border-4"
               />
               <span sec:authentication="name"></span>
             </a>
