--- a/src/main/resources/templates/admin/base.html
+++ b/src/main/resources/templates/admin/base.html
@@ -3,7 +3,7 @@
   <head th:fragment="head">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All Medicines</title>
+    <title>All Drugs</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
@@ -20,8 +20,8 @@
       <a
         class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white"
         href="#"
-        ><i class="bi bi-capsule-pill"></i>MediCare</a
-      >
+        ><i class="bi bi-capsule-pill"></i>MediCare
+      </a>
 
       <ul class="navbar-nav flex-row d-md-none">
         <li class="nav-item text-nowrap">
@@ -74,9 +74,13 @@
             aria-labelledby="sidebarMenuLabel"
           >
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="sidebarMenuLabel">
-                Company name
-              </h5>
+              <a
+                class="offcanvas-title text-decoration-none"
+                id="sidebarMenuLabel"
+                href="#"
+              >
+                <h3><i class="bi bi-capsule-pill text-danger"></i>MediCare</h3>
+              </a>
               <button
                 type="button"
                 class="btn-close"
@@ -102,7 +106,7 @@
                 <li class="nav-item">
                   <a class="nav-link d-flex align-items-center gap-2" href="#">
                     <i class="bi bi-capsule"></i>
-                    Medicines
+                    Drugs
                   </a>
                 </li>
                 <li class="nav-item">
@@ -116,6 +120,15 @@
               <hr class="my-3" />
 
               <ul class="nav flex-column mb-auto">
+                <li class="nav-item">
+                  <a
+                    class="nav-link d-flex align-items-center gap-2"
+                    th:href="@{/}"
+                  >
+                    <i class="bi bi-files-alt"></i>
+                    Go to site
+                  </a>
+                </li>
                 <li class="nav-item">
                   <a
                     class="nav-link d-flex align-items-center gap-2"
