--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -3,41 +3,19 @@
     <h2>Drugs</h2>
     <a
       hx:get="@{/admin/add-drug}"
-      hx-target="#addDrugForm"
+      hx-target="#drugFormModal"
       data-bs-toggle="modal"
-      data-bs-target="#addDrugForm"
+      data-bs-target="#drugFormModal"
       class="btn btn-dark"
       >Add Drug <i class="bi bi-plus-lg"></i
     ></a>
   </div>
   <div class="table-responsive small">
-    <table class="table table-striped table-hover table-sm">
-      <thead class="table-dark">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Name</th>
-          <th scope="col">Price</th>
-          <th scope="col">Description</th>
-          <th scope="col">Enabled?</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr th:each="m : ${drugs}">
-          <td th:text="${m.id}"></td>
-          <td th:text="${m.name}"></td>
-          <td th:text="${#numbers.formatDecimal(m.price, 1, 2)}"></td>
-          <td th:text="${m.description}"></td>
-          <td>
-            <i
-              th:class=" ${m.enabled}? 'bi bi-check2-circle text-success' : 'bi bi-x-circle text-danger'"
-            ></i>
-          </td>
-        </tr>
-      </tbody>
+    <table th:replace="~{admin/_drugs_table :: table}">
     </table>
   </div>
   <div
-    id="addDrugForm"
+    id="drugFormModal"
     class="modal modal-blur fade"
     style="display: none"
     aria-hidden="fals"
