Use a JPA repository

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -30,7 +30,7 @@
             class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
           ></ul>
 
-          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 w-50" role="search">
             <input
               type="search"
               class="form-control"
@@ -39,7 +39,7 @@
             />
           </form>
 
-          <div class="dropdown text-end" sec:authorize="isAuthenticated()">
+          <div class="dropdown text-end col-12 col-lg-auto" sec:authorize="isAuthenticated()">
             <a
               href="#"
               class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
