--- a/src/main/resources/templates/form_fields.html
+++ b/src/main/resources/templates/form_fields.html
@@ -1,9 +1,14 @@
-<div class="form-floating" th:fragment="textField(field, label, hasErrors)">
+<div
+  class="form-floating"
+  th:fragment="textField(field, label)"
+  th:with="disabled=${disabled} ?: false, hasErrors=${hasErrors} ?: false"
+>
   <input
     type="text"
     th:class="${hasErrors}? 'form-control is-invalid' : 'form-control'"
     th:field="*{__${field}__}"
     th:placeholder="${label}"
+    th:disabled="${disabled}"
   />
   <label th:for="${field}" th:text="${label}"> Default Label </label>
   <div
@@ -15,31 +20,18 @@
   </div>
 </div>
 
-<div class="form-floating" th:fragment="numberField(field, label, hasErrors)">
+<div
+  class="form-floating"
+  th:fragment="numberField(field, label)"
+  th:with="disabled=${disabled} ?: false, hasErrors=${hasErrors} ?: false"
+>
   <input
     type="number"
     th:class="${hasErrors}? 'form-control is-invalid' : 'form-control'"
     th:field="*{__${field}__}"
     th:placeholder="${label}"
     th:value="*{__${field}__}"
-  />
-  <label th:for="${field}" th:text="${label}">Default Label</label>
-  <div
-    th:if="${hasErrors}"
-    th:errors="*{__${field}__}"
-    class="invalid-feedback"
-  >
-    Error message
-  </div>
-</div>
-
-<div class="form-floating" th:fragment="textAreaField(field, label, hasErrors)">
-  <textarea
-    rows="10"
-    th:class="${hasErrors}? 'form-control is-invalid' : 'form-control'"
-    th:field="*{__${field}__}"
-    th:placeholder="${label}"
-    th:value="*{__${field}__}"
+    th:disabled="${disabled}"
   />
   <label th:for="${field}" th:text="${label}">Default Label</label>
   <div
@@ -52,8 +44,54 @@
 </div>
 
 <div
+  class="form-floating"
+  th:fragment="textAreaField(field, label)"
+  th:with="disabled=${disabled} ?: false, hasErrors=${hasErrors} ?: false"
+>
+  <textarea
+    rows="10"
+    th:class="${hasErrors}? 'form-control is-invalid' : 'form-control'"
+    th:field="*{__${field}__}"
+    th:placeholder="${label}"
+    th:value="*{__${field}__}"
+    th:disabled="${disabled}"
+  />
+  <label th:for="${field}" th:text="${label}">Default Label</label>
+  <div
+    th:if="${hasErrors}"
+    th:errors="*{__${field}__}"
+    class="invalid-feedback"
+  >
+    Error message
+  </div>
+</div>
+
+<div
+  class="form-floating"
+  th:fragment="fileField(field, label)"
+  th:with="disabled=${disabled} ?: false, hasErrors=${hasErrors} ?: false"
+>
+  <input
+    type="file"
+    th:class="${hasErrors}? 'form-control is-invalid' : 'form-control'"
+    th:field="*{__${field}__}"
+    th:placeholder="${label}"
+    th:disabled="${disabled}"
+  />
+  <label class="form-label" th:for="${field}" th:text="${label}">Default Label</label>
+  <div
+    th:if="${hasErrors}"
+    th:errors="*{__${field}__}"
+    class="invalid-feedback"
+  >
+    Error message
+  </div>
+</div>
+
+<div
   class="form-check form-switch"
   th:fragment="checkboxField(field, label)"
+  th:with="disabled=${disabled} ?: false"
 >
   <input
     class="form-check-input"
@@ -61,6 +99,7 @@
     role="switch"
     th:field="*{__${field}__}"
     th:checked="*{__${field}__}"
+    th:disabled="${disabled}"
   />
   <label class="form-check-label" th:for="${field}" th:text="${label}"></label>
 </div>
