--- a/src/main/resources/templates/_cart_button.html
+++ b/src/main/resources/templates/_cart_button.html
@@ -1,4 +1,8 @@
-<button id="cartButton" class="btn btn-outline-primary rounded me-4 position-relative">
+<a
+  th:href="@{/checkout}"
+  id="cartButton"
+  class="btn btn-outline-primary rounded me-4 position-relative"
+>
   <i class="bi bi-cart2"></i>
   <span
     class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -6,4 +10,4 @@
   >
     <span class="visually-hidden">items</span>
   </span>
-</button>
+</a>
