--- a/src/main/resources/templates/admin/base.html
+++ b/src/main/resources/templates/admin/base.html
@@ -97,24 +97,29 @@
               <ul class="nav flex-column">
                 <li class="nav-item">
                   <a
-                    class="nav-link d-flex align-items-center gap-2 active"
-                    aria-current="page"
-                    href="#"
+                    class="nav-link d-flex align-items-center gap-2"
+                    th:href="@{/admin}"
                   >
-                    <i class="bi bi-house"></i>
-                    Dashboard
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="#">
                     <i class="bi bi-capsule"></i>
                     Drugs
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="#">
+                  <a
+                    class="nav-link d-flex align-items-center gap-2"
+                    th:href="@{/admin/customers}"
+                  >
                     <i class="bi bi-people"></i>
                     Customers
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link d-flex align-items-center gap-2"
+                    th:href="@{/admin/orders}"
+                  >
+                    <i class="bi bi-people"></i>
+                    Orders
                   </a>
                 </li>
               </ul>
